# computational_methods

./: README.md  pyproject.toml  resources.py
computational_methods/: RichYTDownloader.py  YoutubeDownloader_Simple.py  main.py
computational_methods/methods/: fixed_point_iteration_method.py  newton_raphson_method.py  nrm_by_gpt.py  trapezoidal_rule_for_integral_approximation.py
computational_methods/methods/algorithms/: nrm-method.algorithm.md  trapezoidal_rule_to_approximate_integrals.algorithm.md
tests/: __init__.py
