[tool.poetry]
name = "computational-methods"
version = "0.1.0"
description = ""
authors = ["Lucifer516-hp <149323025+Lucifer516-hp@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
sympy = "^1.12"
numpy = "^1.26.4"
rich = "^13.7.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.4.0"
ruff = "^0.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
